# strand-passage

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in
src/: CLK.cpp  CLK.h  autocorr.cpp  autocorr.h  bfacfProbabilitiesFromZ.cpp  bfacfProbabilitiesFromZFixed.cpp  clkConformationAsList.cpp  clkConformationBfacf3.cpp  clkConformationBfacf3.h  contiguous_list.cpp  contiguous_list.h  data_structures.cpp  data_structures.h  edge.cpp  edge.h  legacy.cpp  legacy.h  mmcMain.cpp  mmchain.cpp  mmchain.h  recomboFromFile.cpp  recomboFromFile.h  vertex.cpp  vertex.h  vertices_and_edges.cpp  vertices_and_edges.h  zAnalyzer.cpp  zAnalyzer.h  zAnalyzerMain.cpp
src/tests/: clkTests.cpp  recomboCriteriaTests.cpp  unitTestMain.cpp
